--- a/index.html
+++ b/index.html
@@ -62,19 +62,21 @@
         </div>
       </div>
 
-      <div class="card mb-3" style="max-width: 60%;">
-        <div class="col-md-8">
-          <!-- <p id="image"> -->
+      <div class="card mb-3 col-md-8">  <!-- need to fix right side card spacing -->
+        <div>
+          <!-- coffee image-->
           <div id="image">
-            <img id="image" src="" class="img-fluid rounded-start" alt="">
-
-          </div><!-- </p> -->
-        </div>
-        <div class="col-md-8">
+            <img id="coffee-pic" src="" class="img-fluid rounded-top" alt="Photo of the coffee you searched">
+          </div>  
+          <!-- coffee description and ingredients -->
           <div class="card-body">
             <h5 class="card-title " id="title">Card title</h5>
             <p class="card-text" id="description">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
             <p class="card-text" id="ingredients"><small class="text-muted">Last updated 3 mins ago</small></p>
+          </div>
+        
+        <!-- <add nutritional info here somehow... if we can't figure how to combine it on the same card, may need side-by-side or stacked cards> -->
+          
           </div>
         </div>
       </div>
