add header logo

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <!-- navbar -->
   <nav class="navbar navbar-expand-md">
     <div class="container">
-      <span class="navbar-brand mb-0 h1 ">Cup O' Tears</span>
+      <span class="navbar-brand mb-0 h1 "></span>
 
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">  
         <span class="navbar-toggler-icon"></span>
@@ -39,6 +39,7 @@
 
   <!-- banner above main section-->
   <div class="container-fluid p-0">
+    <img src="./assets/images/Low Resolution Logo - Transparent Background.png" class="fixedtop"   alt="">
     <img src="./assets/images/coffee-banner.jpg" class="w-100" alt="">
   </div>
 
@@ -48,11 +49,11 @@
     <div class="card mb-3" style="max-width: 60%;">
       <div class="row g-0">
         <div class="col-md-4">
-          <!-- <p id="image"> -->
-          <div id="image">
-            <img id="image" src="" class="img-fluid rounded-start" alt="">
+        
+          <!-- <div id="image" class="image img-fluid rounded-start"> -->
+            
 
-          </div><!-- </p> -->
+          </div>
         </div>
         <div class="col-md-8">
           <div class="card-body">
