--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
   </div>
 
   <div class="row">
-
     <div class="col-4">Side Bar</div>
+    <input type="search" id="search">
     <div class="card mb-3" style="max-width: 60%;">
       <div class="row g-0">
         <div class="col-md-4">
