fixed a spacing issue for the cards

--- a/index.html
+++ b/index.html
@@ -47,10 +47,9 @@
       alt="coffee beans gathered on a light wooden table">
     <img src="./assets/images/coffee-banner.jpg" class="w-100" alt="">
   </div>
-  <br>
 
-  <div class="container-fluid">
-    <div class="row">
+  <div class="container-fluid p-0">
+    <div class="row m-2">
       <!-- search bar & button -->
       <div class="col-md-4">
         <div class="input-group mb-3">
