added function to search bar to produce coffe results for sampleapi and added a click event

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         </div>
       </div>
 
-      <div class="card mb-3 col-md-8">
+      <div class="card mb-3 col-md-8" style="display: none;">
         <!-- need to fix right side card spacing -->
         <div>
           <!-- coffee image-->
