mostly finished auto-complete.  a few issues left

--- a/index.html
+++ b/index.html
@@ -52,9 +52,10 @@
     <div class="row m-2">
       <!-- search bar & button -->
       <div class="col-md-4">
-        <div class="input-group mb-3">
-          <input type="text" class="form-control" placeholder="Search a Coffee!">
+        <div class="form-group mb-3"> <!-- gotta fix styling, had to change to form -->
+          <input type="text" name="q" id="q" onKeyUp="showResults(this.value)" class="form-control" placeholder="Search a Coffee!">
           <button class="btn" type="button" id="search-button">Get Coffee</button>
+          <div id="result"></div>
         </div>
 
         <!-- search history container -->
