API Code to display Facts

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
         <div class="container-fluid">
           <p>this is where the search history will go. it should fit inside the alotted space. </p>
         </div>
+        <div class ="info">Coffee Info</div>
       </div>
 
       <div class="card mb-3 col-md-8" style="display: none;">
