--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         </div>
         <div class ="info">Coffee Info</div>
       </div>
-
+git 
       <div class="card mb-3 col-md-8" style="display: none;">
         <!-- need to fix right side card spacing -->
         <div>
