--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
         </div>
         <div class ="info">Coffee Info</div>
       </div>
-git 
-      <div class="card mb-3 col-md-8" style="display: none;">
+
+      <div id="container" class="card mb-3 col-md-8">
         <!-- need to fix right side card spacing -->
         <div>
           <!-- coffee image-->
