--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <div class ="info">Coffee Info</div>
       </div>
 
-      <div id="container" class="card mb-3 col-md-8">
+      <div id="container" class=>
         <!-- need to fix right side card spacing -->
         <div>
           <!-- coffee image-->
@@ -74,9 +74,12 @@
           </div>
           <!-- coffee description and ingredients -->
           <div class="card-body">
-            <h5 class="card-title " id="title">Card title</h5>
-            <p class="card-text" id="description">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <div class = coffeedescription>
+              <h5 class="card-title " id="title">Card title</h5>
+              <p class="card-text" id="description">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            </div> 
             <p class="card-text" id="ingredients"><small class="text-muted">Last updated 3 mins ago</small></p>
+            <p class="card-text" id="nutrition">Nutritional Data Goes Here</p>
           </div>
 
           <!-- <add nutritional info here somehow... if we can't figure how to combine it on the same card, may need side-by-side or stacked cards> -->
