--- a/index.html
+++ b/index.html
@@ -79,11 +79,13 @@
               <p class="card-text" id="description">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
             </div> 
             <p class="card-text" id="ingredients"><small class="text-muted">Last updated 3 mins ago</small></p>
-            <p class="card-text" id="nutrition">Nutritional Data Goes Here</p>
           </div>
-
           <!-- <add nutritional info here somehow... if we can't figure how to combine it on the same card, may need side-by-side or stacked cards> -->
-
+           <div id="nutrition"> 
+            <h5> Nutritional Information</h5>
+            <p class="card-text" >Nutritional Data Goes Here</p>
+          </div>
+           
         </div>
       </div>
     </div>
