fixing last push merge from team

--- a/index.html
+++ b/index.html
@@ -80,6 +80,9 @@
             </div> 
             <p class="card-text" id="ingredients"><small class="text-muted">Last updated 3 mins ago</small></p>
             <p class="card-text" id="nutrition">Nutritional Data Goes Here</p>
+            <h3 id="calories" class="calories"></h3>
+            <h3 id="fat"></h3>
+            <h3 id="sugars"></h3>
           </div>
 
           <!-- <add nutritional info here somehow... if we can't figure how to combine it on the same card, may need side-by-side or stacked cards> -->
