coffee notes sections in html, js, and css

--- a/index.html
+++ b/index.html
@@ -58,11 +58,18 @@
         </div>
         <div id="result" class="mb-3"></div> <!-- where autocomplete displays -->
 
-        <!-- search history container -->
-        <div class="container-fluid">
-          <p>this is where the search history will go. it should fit inside the alotted space. </p>
-        </div>
-        <div class ="info">Coffee Info</div>
+      <!-- coffee notes notepad -->
+      <div id="wrapper">
+        <form id="paper" method="get" action="">
+        <h5 id="coffee-notes">Coffee Notes:</h5>
+        <textarea placeholder="Musings go here." id="notes-text" name="text" rows="4" style="overflow: hidden; word-wrap: break-word; resize: none; height: 160px; "></textarea>
+        <br>
+        <input id="button" type="submit" value="Save">
+        </form>
+      </div>
+
+        <div class ="info">Coffee Info</div> <!-- mystery div -->
+
       </div>
 
       <div id="container" class=>
