--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@
           <p>this is where the search history will go. it should fit inside the alotted space. </p>
         </div>
         <div class ="info">Coffee Info</div>
+        <h3 id="calories" class="">Calories:</h3>
+            <h3 id="fat">Fat:</h3>
+            <h3 id="sugars">Sugars:</h3>
       </div>
 
       <div id="container" class=>
@@ -80,9 +83,7 @@
             </div> 
             <p class="card-text" id="ingredients"><small class="text-muted">Last updated 3 mins ago</small></p>
             <p class="card-text" id="nutrition">Nutritional Data Goes Here</p>
-            <h3 id="calories" class="calories"></h3>
-            <h3 id="fat"></h3>
-            <h3 id="sugars"></h3>
+            
           </div>
 
           <!-- <add nutritional info here somehow... if we can't figure how to combine it on the same card, may need side-by-side or stacked cards> -->
