--- a/index.html
+++ b/index.html
@@ -58,21 +58,18 @@
         </div>
         <div id="result" class="mb-3"></div> <!-- where autocomplete displays -->
 
-      <!-- coffee notes notepad -->
-      <div id="wrapper">
-        <form id="paper" method="get" action="">
-        <h5 id="coffee-notes">Coffee Notes:</h5>
-        <textarea placeholder="Musings go here." id="notes-text" name="text" rows="4" style="overflow: hidden; word-wrap: break-word; resize: none; height: 160px; "></textarea>
-        <br>
-        <input id="button" type="submit" value="Save">
-        </form>
+      <!-- begin coffee notes section -->
+      <div class="card">
+        <h5 class="card-header" id="notes-header">Coffee Notes:</h5>
+        <textarea id="notes-text" name="text" rows="4" style="overflow: hidden; word-wrap: break-word; resize: none; height: 160px;"></textarea>
+        
+        </div>
+          <input id="save-button" type="submit" value="Save Notes" style="float: right">
+        </div>
       </div>
+      <!-- end coffee notes section -->
 
-        <div class ="info">Coffee Info</div> <!-- mystery div -->
-
-      </div>
-
-      <div id="container" class=>
+      <div id="container" style="display: none">
         <!-- need to fix right side card spacing -->
         <div>
           <!-- coffee image-->
