--- a/index.html
+++ b/index.html
@@ -79,5 +79,6 @@
 
 
     <script src="https://code.jquery.com/jquery.js"></script>
+    <script src="./assets/JS/hidden.js"></script>
     <script src="./assets/JS/script.js"></script>
 </body>
