fixed nav links text color, cleared up extra CSS spaces

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
           <span class="navbar-toggler-icon"></span>
-        </button> <!-- hamburger button if we come up w/ enough navbar items to need it (for collapse)-->
+        </button>
   
         <div class="collapse navbar-collapse" id="navmenu">
           <!-- added collapse-->
@@ -36,11 +36,11 @@
             <li class="nav-item">
               <a href="" class="nav-link">Any Other Great Ideas!!</a>
             </li>
-            <!-- can add more navbar links here if we think of some, just filler -->
           </ul>
         </div>
       </div>
     </nav>
+    <!-- end navbar -->
   </div>
 
   <main class="backgroundImg">
