--- a/index.html
+++ b/index.html
@@ -46,12 +46,15 @@
   <main class="backgroundImg">
     <div class="">
       <div class="col-sm-3">
+        <!-- begin searchbar -->
         <div class="input-group mb-3">
           <input type="text" name="q" id="q" onKeyUp="showResults(this.value)" class="form-control"
             placeholder="Search a Coffee!">
           <button class="btn" type="button" id="search-button">Get Coffee</button>
         </div>
-        <div id="result" class="mb-3"></div> <!-- where autocomplete displays -->
+
+        <div id="result" class="mb-3" style="opacity: .8;"></div> <!-- where autocomplete displays -->
+        <!-- end searchbar -->
 
         <!-- begin coffee notes section -->
         <div class="card">
