--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
               <p>Fat: <span id="fat"></span></p>
               <p>Calories: <span id="calories"></span></p>
               <P>Sugars: <span id="sugars"></span></P>
-      
+              <h1 id="wordDisplay"></h1>
               <!-- coffee image-->
               <div id="image">
                 <img id="coffee-pic" src="" class="img-fluid">
