--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
         
 
         <div class="col-4">
+          <div class="container" style="display: none;">
             <div class="card-body">
               <div class="coffeedescription">
                 <h5 class="card-title " id="title">Card title</h5>
