added some padding and fixed sizing and spacing of the logo image, rounded the corners of results card and added padding to the inner text

--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@
 
   <main class="backgroundImg">
       <div class="boxes">
-        <img src="./assets/images/Low Resolution Logo - Transparent Backgroundwhte.png"
-       alt="coffee beans gathered on a light wooden table" class="img-fluid">
+        <img src="./assets/images/Low Resolution Logo - Transparent Backgroundwhte.png">
       </div>
       <div class="row">
         <div class="col-4">
