autocomplete click-fill finished

--- a/index.html
+++ b/index.html
@@ -51,12 +51,12 @@
       <div class="row">
         <div class="col-4">
           <!-- begin searchbar -->
-          <div class="input-group mb-3">
+          <div class="input-group">
             <input type="text" name="q" id="q" onKeyUp="showResults(this.value)" class="form-control"
               placeholder="Search a Coffee!">
             <button class="btn" type="button" id="search-button">Get Coffee</button>
           </div>
-          <div id="result" class="mb-3"></div> <!-- where autocomplete displays -->
+          <ul id="result" class="mb-3"></ul> <!-- where autocomplete displays -->
           <!-- end searchbar -->
         
           <!-- begin coffee notes section -->
