removed display message and added the autocomplete to a new clean branch

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <img src="./assets/images/Low Resolution Logo - Transparent Backgroundwhte.png">
        <h1 id="wordDisplay"></h1>
       </div>
-      <div class="row hidden" id="searchbar">
+      <div class="row">
         <div class="col-4">
           <!-- begin searchbar -->
           <div class="input-group">
@@ -75,7 +75,7 @@
 
         <div class="col-4">
 
-            <div class="card-body hidden">
+    
           <div class="container" style="display: none;">
             <div class="card-body">
               <div class="coffeedescription">
@@ -84,7 +84,7 @@
                   additional content. This content is a little bit longer.</p>
               </div>
               <p class="card-text" id="ingredients"><small class="text-muted">Last updated 3 mins ago</small></p>
-              <p class="card-text" id="nutrition">Nutritional Data Goes Here</p>
+              <p class="card-text" id="nutrition">Nutrition Facts</p>
               <p>Fat: <span id="fat"></span></p>
               <p>Calories: <span id="calories"></span></p>
               <P>Sugars: <span id="sugars"></span></P>
