--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
     crossorigin="anonymous"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Caveat&family=Libre+Baskerville&family=Playfair+Display:ital@1&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./assets/css/styles2.css">
   <title>Cup O' Tears Coffee</title>
 </head>
@@ -46,7 +47,7 @@
   <main class="backgroundImg">
       <div class="boxes">
 
-        <img src="./assets/images/Low Resolution Logo - Transparent Backgroundwhte.png">
+        <img id="logo" src="./assets/images/Low Resolution Logo - Transparent Backgroundwhte.png">
        <h1 id="wordDisplay"></h1>
       </div>
       <div class="row">
