--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
           <span class="navbar-toggler-icon"></span>
         </button>
 
-        <div class="collapse navbar-collapse" id="navmenu">
-          <!-- collapse -->
+        <div class="collapse navbar-collapse" id="navmenu"> <!-- collapse -->
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
               <a href="https://www.ncausa.org/About-Coffee" class="nav-link">Coffee Guide!</a>
@@ -49,7 +48,6 @@
 
   <main class="backgroundImg">
     <div class="boxes">
-
       <!-- logo -->
       <img id="logo" src="./assets/images/Low Resolution Logo - Transparent Backgroundwhte.png">
 
@@ -62,8 +60,7 @@
       <div class="col-4">
         <!-- begin searchbar -->
         <div class="input-group">
-          <input type="text" name="q" id="q" onKeyUp="showResults(this.value)" class="form-control"
-            placeholder="Search a Coffee!">
+          <input type="text" name="q" id="q" onKeyUp="showResults(this.value)" class="form-control" placeholder="Search a Coffee!">
           <button class="btn" type="button" id="search-button">Get Coffee</button>
         </div>
         <ul id="result" class="mb-3"></ul> <!-- where autocomplete displays -->
