--- a/index.html
+++ b/index.html
@@ -50,11 +50,12 @@
     <div class="boxes">
       <!-- logo -->
       <img id="logo" src="./assets/images/Low Resolution Logo - Transparent Backgroundwhte.png">
-
-      <h1 id="wordDisplay"></h1> <!-- Popup word space -->
-
     </div>
-
+    
+    <div>
+      <h1 id="wordDisplay"></h1><!-- Popup word space -->
+    </div>
+    
     <div class="row">
 
       <div class="col-4">
