cleaned up some commenting and commenting out

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       </div>
 
       <!-- center spacing to separate left and right containers -->
-      <div class="col-4"></div>
+      <div class="col-4"></div><!-- add responsiveness when something is in here-->
 
       <div class="col-md-4 col-sm-12">
         <!-- begin main search display -->
