added 2nd navbar link

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
               <a href="https://www.ncausa.org/About-Coffee" class="nav-link">Coffee Guide!</a>
             </li>
             <li class="nav-item">
-              <a href="" class="nav-link">Any Other Great Ideas!!</a>
+              <a href="https://www.google.com/maps/search/coffee/" class="nav-link">Coffee Near You!</a>
             </li>
           </ul>
         </div>
